# FloppIO-OSS

./: .gitignore  README.md  player.py  setup.sh
pico/floppy/: floppy.c  floppy.elf
pico/hdd/: .gitignore  CMakeLists.txt  hdd.c  hdd.code-workspace  hdd.elf  program.pio
pico/scanner/: CMakeLists.txt  program.pio  scanner.c  scanner.elf
pico/scanner/lib/: endstops.c  endstops.h
